# AI-agent

./: .dockerignore  .gitignore  Taskfile.yml  docker-compose.yaml  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 001_users_comments_tables.py
app/: config.py  main.py
app/agent/: runner.py
app/db/: __init__.py  base.py  models.py  session.py
app/llm/: anthropic.py  base.py  factory.py  ollama.py  structured.py
app/schemas/: agent.py
app/tools/: registry.py  sql_tools.py
scripts/: docker-entrypoint.sh  migrate.sh  seed_mock_data.py
